show method in swagger
